<resources>
    <string name="app_name">modul_1</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">HASIL :</string>
    <string name="program_menghitung_bangun_ruang">PROGRAM MENGHITUNG BANGUN RUANG</string>
    <string name="volume_segitiga">segitiga</string>
    <string name="kubus">kubus</string>
    <string name="tabung">tabung</string>
    <string name="kerucut">kerucut</string>
    <string name="bola">bola</string>
    <string name="balok">balok</string>
    <string name="segiempat">segiempat</string>
    <string name="alas">Alas</string>
    <string name="jari_jari">Jari-Jari</string>
    <string name="sisi">Sisi</string>
    <string name="luas_alas">Luas Alas</string>
</resources>